FINERACT-2421: Refractor redundant and some deprecated code as per new Java 21 style (Phase 5)